--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:background="#ecf0f1">
+    android:background="#ecf0f1"
+    android:fitsSystemWindows="true">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -24,59 +22,95 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="center"
-                android:theme="@style/Theme.DataCzar"
-                android:gravity="center">
-
+                android:gravity="center"
+                app:contentInsetLeft="0dp"
+                app:contentInsetStart="0dp"
+                android:theme="@style/Theme.DataCzar">
                 <LinearLayout
                     android:id="@+id/llContainer"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
-                    android:orientation="horizontal"
                     android:layout_gravity="center"
                     android:gravity="center"
+                    android:orientation="horizontal"
                     android:weightSum="10">
 
                     <ImageView
                         android:id="@+id/imgActionbarlogo"
                         android:layout_width="0dp"
-                        android:layout_weight="8.5"
                         android:layout_height="?attr/actionBarSize"
-                        android:scaleType="centerInside"
-                        android:padding="18dp"
                         android:layout_gravity="center"
+                        android:layout_weight="8.5"
                         android:foregroundGravity="center"
-                        android:visibility="visible"
-                        android:src="@drawable/ic_applogo"/>
+                        android:paddingTop="20dp"
+                        android:paddingStart="30dp"
+                        android:paddingBottom="20dp"
+
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_applogo"
+                        android:visibility="visible" />
 
                     <TextView
                         android:id="@+id/tvActionbartitle"
                         android:layout_width="0dp"
-                        android:layout_weight="7"
                         android:layout_height="?attr/actionBarSize"
-                        android:text=""
                         android:layout_gravity="center"
-                        android:textStyle="bold"
-                        android:visibility="gone"
+                        android:layout_weight="8.5"
+                        android:gravity="center"
+                        android:text=""
                         android:textSize="20dp"
-                        android:gravity="center"/>
+                        android:layout_marginEnd="30dp"
+                        android:textStyle="bold"
+                        android:visibility="gone" />
 
-                     <View
-                            android:layout_width="0dp"
-                            android:layout_weight="0.8"
-                            android:layout_height="?attr/actionBarSize"/>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="?attr/actionBarSize"
+                        android:layout_weight="1.3"
+                        android:id="@+id/llLinks"
+                        android:orientation="horizontal"
+                        android:visibility="gone">
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:text="Links"
+                            android:gravity="center"
+                            app:layout_constraintEnd_toStartOf="@id/ivExpand"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:textColor="@color/black"
+                            android:textSize="14sp" />
+                        <ImageView
+                            android:id="@+id/ivExpand"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:src="@drawable/ic_expand_less"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <View
+                        android:id="@+id/viewSpace"
+                        android:layout_width="0dp"
+                        android:visibility="gone"
+                        android:layout_height="?attr/actionBarSize"
+                        android:layout_weight="0.8" />
 
                     <ImageView
                         android:id="@+id/imgSettingMenu"
                         android:layout_width="0dp"
-                        android:layout_weight="1"
-                        android:scaleType="centerInside"
                         android:layout_height="?attr/actionBarSize"
                         android:layout_gravity="right|center_vertical"
+                        android:layout_weight="1"
                         android:foregroundGravity="right|center_vertical"
-                        android:src="@drawable/ic_setting"
-                        android:visibility="visible"
                         android:padding="4dp"
-                        android:layout_marginRight="8dp"/>
+                        android:scaleType="centerInside"
+                        android:src="@drawable/ic_setting"
+                        android:visibility="gone" />
 
 
                 </LinearLayout>
@@ -96,6 +130,7 @@
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
+            style="@style/myBottomNavigationStyle"
             android:layout_width="match_parent"
             android:layout_height="64dp"
             android:layout_alignParentBottom="true"
@@ -106,8 +141,7 @@
             app:itemRippleColor="@color/app_icon_color_gray"
             app:itemTextColor="@color/bottomicon_selector"
             app:labelVisibilityMode="labeled"
-            app:menu="@menu/dashboard_menu"
-            style="@style/myBottomNavigationStyle" />
+            app:menu="@menu/dashboard_menu" />
 
     </RelativeLayout>
 
@@ -115,25 +149,25 @@
         android:id="@+id/nav_view"
         android:layout_width="210dp"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:fitsSystemWindows="true"
         android:layout_gravity="start"
-        android:weightSum="10"
-        android:background="@color/app_sidebar_gray">
+        android:background="@color/app_sidebar_gray"
+        android:fitsSystemWindows="true"
+        android:orientation="vertical"
+        android:weightSum="10">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="match_parent"
-            android:background="@color/app_sidebar_bg_gray"
             android:layout_height="0dp"
-            android:layout_weight="0.7"
-            android:text="Main Menu"
-            app:itemTextColor="@android:color/white"
-            android:textColor="@color/app_sidemenu_text"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-            android:textStyle="bold"
             android:layout_gravity="bottom"
+            android:layout_weight="0.7"
+            android:background="@color/app_sidebar_bg_gray"
             android:gravity="bottom"
-            android:paddingStart="15dp"/>
+            android:paddingStart="15dp"
+            android:text="Main Menu"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textColor="@color/app_sidemenu_text"
+            android:textStyle="bold"
+            app:itemTextColor="@android:color/white" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -166,19 +200,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_gravity="top"
-                android:paddingStart="16dp"
-                app:itemIconSize="20dp"
-                android:padding="8dp"
-                app:menu="@menu/side_menu"
-                app:theme="@style/NavigationDrawerStyle"
-                app:itemIconTint="@color/black"
-                app:itemTextColor="@color/app_sidemenu_text"
-                app:itemShapeAppearanceOverlay="@color/drawer_item"
                 android:background="@color/app_sidebar_bg_gray"
+                android:padding="8dp"
+                android:paddingStart="16dp"
+                app:itemIconPadding="16dp"
+                app:itemIconSize="20dp"
+                app:itemIconTint="@color/black"
+                app:itemShapeAppearanceOverlay="@color/drawer_item"
                 app:itemShapeFillColor="@color/app_sidebar_item_gray"
                 app:itemShapeInsetStart="0dp"
                 app:itemTextAppearance="@style/Nav_fontStyle"
-                app:itemIconPadding="16dp"/>
+                app:itemTextColor="@color/app_sidemenu_text"
+                app:menu="@menu/side_menu"
+                app:theme="@style/NavigationDrawerStyle" />
 
         </LinearLayout>
 
