--- a/app/src/main/res/layout-sw600dp/login_user.xml
+++ b/app/src/main/res/layout-sw600dp/login_user.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:text="@string/login_button_text"
         android:textSize="30dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/metropolis_semibold"
         android:layout_marginTop="25dp"
         android:gravity="center_horizontal"
         android:layout_gravity="center_horizontal"
@@ -37,7 +37,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/metropolis_semibold"
         android:text="@string/login_email_text"/>
 
     <androidx.appcompat.widget.AppCompatEditText
@@ -61,7 +61,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:layout_marginTop="16dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/metropolis_semibold"
         android:text="@string/login_password_text"/>
 
     <androidx.appcompat.widget.AppCompatEditText
@@ -87,6 +87,7 @@
         android:layout_marginEnd="60dp"
         android:textSize="22sp"
         android:textStyle="bold"
+        android:fontFamily="@font/metropolis_semibold"
         android:text="@string/login_forgotpassword"/>
 
 
@@ -98,6 +99,7 @@
         android:text="@string/login_button_text"
         android:textColor="@color/app_color_white"
         android:minWidth="250dp"
+        android:fontFamily="@font/metropolis_semibold"
         android:padding="8dp"
         android:layout_margin="20dp"
         android:backgroundTint="@color/app_color_primary"
@@ -119,6 +121,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login_no_account"
+            android:fontFamily="@font/metropolis_semibold"
             android:textSize="20sp"
             android:textStyle="bold"/>
 
@@ -129,6 +132,7 @@
             android:paddingStart="4dp"
             android:paddingEnd="8dp"
             android:textSize="22sp"
+            android:fontFamily="@font/metropolis_semibold"
             android:textColor="@color/app_color_primary"
             android:text="@string/login_signup"
             android:textStyle="bold"/>
