--- a/app/src/main/res/layout-sw720dp/login_user.xml
+++ b/app/src/main/res/layout-sw720dp/login_user.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:text="@string/login_button_text"
         android:textSize="30dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/metropolis_semibold"
         android:layout_marginTop="25dp"
         android:gravity="center_horizontal"
         android:layout_gravity="center_horizontal"
@@ -37,7 +37,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginStart="90dp"
         android:layout_marginEnd="90dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/metropolis_semibold"
         android:text="@string/login_email_text"/>
 
     <androidx.appcompat.widget.AppCompatEditText
@@ -61,7 +61,7 @@
         android:layout_marginStart="90dp"
         android:layout_marginEnd="90dp"
         android:layout_marginTop="16dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/metropolis_semibold"
         android:text="@string/login_password_text"/>
 
     <androidx.appcompat.widget.AppCompatEditText
@@ -86,7 +86,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="60dp"
         android:textSize="22sp"
-        android:textStyle="bold"
+        android:fontFamily="@font/metropolis_semibold"
         android:text="@string/login_forgotpassword"/>
 
 
@@ -104,7 +104,7 @@
         android:gravity="center"
         android:layout_gravity="center"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:fontFamily="@font/metropolis_semibold"/>
 
 
     <LinearLayout
@@ -120,7 +120,7 @@
             android:layout_height="wrap_content"
             android:text="@string/login_no_account"
             android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:fontFamily="@font/metropolis_semibold"/>
 
         <TextView
             android:id="@+id/tvtSignup"
@@ -131,7 +131,7 @@
             android:textSize="22sp"
             android:textColor="@color/app_color_primary"
             android:text="@string/login_signup"
-            android:textStyle="bold"/>
+            android:fontFamily="@font/metropolis_semibold"/>
 
     </LinearLayout>
 
