--- a/app/src/main/res/layout-sw600dp/login_user.xml
+++ b/app/src/main/res/layout-sw600dp/login_user.xml
@@ -1,154 +1,157 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:timer="http://schemas.android.com/tools"
-    android:background="@color/app_color_gray"
-    android:orientation="vertical"
-    android:gravity="center">
+<layout>
 
-    <ImageView
-        android:id="@+id/textView"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:timer="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="28dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_applogo"
-        android:layout_margin="8dp"
-        android:contentDescription="@string/login_img_title_desc" />
-
-    <TextView
-        android:id="@+id/tvtitlesignin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/login_button_text"
-        android:textSize="30dp"
-        android:fontFamily="@font/metropolis_semibold"
-        android:layout_marginTop="25dp"
-        android:gravity="center_horizontal"
-        android:layout_gravity="center_horizontal"
-        android:textColor="@android:color/black"/>
-
-    <TextView
-        android:id="@+id/tvtitleemail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:layout_marginTop="32dp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
-        android:fontFamily="@font/metropolis_semibold"
-        android:text="@string/login_email_text"/>
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edEmail"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints=""
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:inputType="textEmailAddress"
-        android:background="@drawable/edittext_roundcorner"
-        android:minHeight="65dp"
-        android:padding="8dp" />
-
-    <TextView
-        android:id="@+id/tvtitlepass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/metropolis_semibold"
-        android:text="@string/login_password_text"/>
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/edPassword"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autofillHints=""
-        android:layout_marginStart="60dp"
-        android:layout_marginEnd="60dp"
-        android:layout_marginTop="8dp"
-        android:inputType="textPassword"
-        android:minHeight="65dp"
-        android:background="@drawable/edittext_roundcorner"
-        android:padding="8dp" />
-
-    <TextView
-        android:id="@+id/tvForgotPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|center_vertical"
-        android:gravity="end|center_vertical"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="60dp"
-        android:textSize="22sp"
-        android:textStyle="bold"
-        android:fontFamily="@font/metropolis_semibold"
-        android:text="@string/login_forgotpassword"/>
-
-
-    <TextView
-        android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/orange_roundcorner"
-        android:text="@string/login_button_text"
-        android:textColor="@color/app_color_white"
-        android:minWidth="250dp"
-        android:fontFamily="@font/metropolis_semibold"
-        android:padding="8dp"
-        android:layout_margin="20dp"
-        android:backgroundTint="@color/app_color_primary"
+        android:layout_height="match_parent"
+        android:background="@color/app_color_gray"
         android:gravity="center"
-        android:layout_gravity="center"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:orientation="vertical">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:foregroundGravity="center">
+        <ImageView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="28dp"
+            android:layout_margin="8dp"
+            android:contentDescription="@string/login_img_title_desc"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_applogo" />
 
         <TextView
-            android:id="@+id/tvtitlesignup"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvtitlesignin"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/login_no_account"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="25dp"
             android:fontFamily="@font/metropolis_semibold"
-            android:textSize="20sp"
-            android:textStyle="bold"/>
+            android:gravity="center_horizontal"
+            android:text="@string/login_button_text"
+            android:textColor="@android:color/black"
+            android:textSize="30dp" />
 
         <TextView
-            android:id="@+id/tvtSignup"
+            android:id="@+id/tvtitleemail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="60dp"
+            android:fontFamily="@font/metropolis_semibold"
+            android:text="@string/login_email_text"
+            android:textSize="22sp" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="60dp"
+            android:autofillHints=""
+            android:background="@drawable/edittext_roundcorner"
+            android:inputType="textEmailAddress"
+            android:minHeight="65dp"
+            android:padding="8dp" />
+
+        <TextView
+            android:id="@+id/tvtitlepass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="60dp"
+            android:fontFamily="@font/metropolis_semibold"
+            android:text="@string/login_password_text"
+            android:textSize="22sp" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="60dp"
+            android:autofillHints=""
+            android:background="@drawable/edittext_roundcorner"
+            android:inputType="textPassword"
+            android:minHeight="65dp"
+            android:padding="8dp" />
+
+        <TextView
+            android:id="@+id/tvForgotPass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingStart="4dp"
-            android:paddingEnd="8dp"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="60dp"
+            android:fontFamily="@font/metropolis_semibold"
+            android:gravity="end|center_vertical"
+            android:text="@string/login_forgotpassword"
             android:textSize="22sp"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/btnLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+            android:background="@drawable/orange_roundcorner"
+            android:backgroundTint="@color/app_color_primary"
             android:fontFamily="@font/metropolis_semibold"
-            android:textColor="@color/app_color_primary"
-            android:text="@string/login_signup"
-            android:textStyle="bold"/>
+            android:gravity="center"
+            android:minWidth="250dp"
+            android:padding="8dp"
+            android:text="@string/login_button_text"
+            android:textColor="@color/app_color_white"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:foregroundGravity="center"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tvtitlesignup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/metropolis_semibold"
+                android:text="@string/login_no_account"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvtSignup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/metropolis_semibold"
+                android:paddingStart="4dp"
+                android:paddingEnd="8dp"
+                android:text="@string/login_signup"
+                android:textColor="@color/app_color_primary"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/GoogleSignIn"
+            android:layout_width="225dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:minWidth="225dp"
+            android:visibility="visible"
+            app:buttonSize="wide"
+            app:colorScheme="dark" />
 
     </LinearLayout>
-
-
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/GoogleSignIn"
-        android:layout_width="225dp"
-        android:layout_height="wrap_content"
-        android:minWidth="225dp"
-        android:layout_gravity="center"
-        app:colorScheme="dark"
-        app:buttonSize="wide"
-        android:layout_marginTop="16dp"
-        android:visibility="visible" />
-
-</LinearLayout>
+</layout>
