--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -27,22 +27,33 @@
                 app:srcCompat="@drawable/ic_arrow_back" />
 
             <androidx.appcompat.widget.AppCompatTextView
+                style="@style/titleText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-              style="@style/titleText"
                 android:gravity="end"
                 android:text="Create Post"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/ivInfo"
                 app:layout_constraintStart_toEndOf="@id/ivBack"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/ivInfo"
+                android:layout_width="24dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="10dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_info_view" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
         <com.dataczar.main.utils.CustomHorizontalProgressBar
             android:id="@+id/horizontalProgress"
             android:layout_width="match_parent"
             android:layout_height="4dp"
+            android:visibility="invisible"
             app:animationDuration="2000"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/llToolbar" />
@@ -127,8 +138,8 @@
                         android:scaleType="fitXY"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/no_image"
-                        app:shapeAppearanceOverlay="@style/roundedImageView" />
+                        app:shapeAppearanceOverlay="@style/roundedImageView"
+                        app:srcCompat="@drawable/no_image" />
 
 
                     <TextView
